--- a/Homepage.html
+++ b/Homepage.html
@@ -20,7 +20,7 @@
                     <li><a href="About.html">About</a></li>
                     <li><a href="https://hsr.hoyoverse.com/en-us/">Official Page</a></li>
                 </ul>
-                <audio id="bgmusic" loop src="Audio/bg music.mp3" ></audio>    
+                <audio id="bgmusic" loop src="Audio/Star Rail.mp3" ></audio>    
                 
             </div>   
         
