--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body class="bg2">
     <p id="raillogo">
@@ -48,7 +48,8 @@
                 
                 Their first destination is Jarilo-VI, a planet that has been mostly ravaged by the Eternal Freeze, an uninhabitable winter due to the power of a Stellaron. As the crew nears, the Astral Express is revealed to be unable to leave until the Stellaron is handled. They are declared fugitives by Supreme Guardian Cocolia due to her paranoia, and escape underground where they learn of the peacekeeping Wildfire and their ongoing conflict with Svarog, the leader of the robots, who has repeatedly rejected peace talks. After settling their differences, the crew returns to the surface to face Cocolia, who merges herself with the Stellaron. The crew defeats her, and Bronya takes her place as the new Supreme Guardian while announcing plans to bridge the two areas.<br><br>
                 
-                Following the conclusion of the Jarilo-VI storyline, the crew receives a signal from Kafka, who wants the crew to settle a Stellaron incident on the Xianzhou Luofu. As they arrive, they are not permitted to assist in Stellaron affairs but are instead tasked by Cloud Knight general Jing Yuan to weed out Kafka and her Stellaron Hunter cohort Blade, as their presence on the ship is deemed a threat. Upon the crew finding Kafka, she revealed that her job was finished the moment the Trailblazer arrived on the Xianzhou Luofu, an action foreseen by her boss, Elio.</p>
+                Following the conclusion of the Jarilo-VI storyline, the crew receives a signal from Kafka, who wants the crew to settle a Stellaron incident on the Xianzhou Luofu. As they arrive, they are not permitted to assist in Stellaron affairs but are instead tasked by Cloud Knight general Jing Yuan to weed out Kafka and her Stellaron Hunter cohort Blade, as their presence on the ship is deemed a threat. Upon the crew finding Kafka, she revealed that her job was finished the moment the Trailblazer arrived on the Xianzhou Luofu, an action foreseen by her boss, Elio.
+                <br><br>Wikipedia</p>
         </div>
 
 
