--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
     <div class="menu">
         <img src="images/starrail logo.png" class="raillogo" >
         <ul>
-            <li><a href="Homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Reviews.html">Reviews</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="https://hsr.hoyoverse.com/en-us/">Official Page</a></li>
