--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
             <li><a href="About.html">About</a></li>
             <li><a href="https://hsr.hoyoverse.com/en-us/">Official Page</a></li>
         </ul>
-        <audio id="bgmusic" loop src="Audio/Star Rail.mp3" ></audio>  
+        <audio id="bgmusic" loop autoplay src="Audio/Star Rail.mp3" ></audio>  
     </div>
     <script type="text/javascript">
         window.onload= function(){
