--- a/Reviews.html
+++ b/Reviews.html
@@ -18,7 +18,7 @@
             <li><a href="About.html">About</a></li>
             <li><a href="https://hsr.hoyoverse.com/en-us/">Official Page</a></li>
         </ul>
-        <audio id="bgmusic" loop src="Audio/Star Rail.mp3" ></audio>  
+        <audio id="bgmusic" autoplay loop src="Audio/Star Rail.mp3" ></audio>  
     </div>
     <script type="text/javascript">
         window.onload= function(){
